# LigBee-Review

./: README.md
ligbee-cots/offline-demo/: CMakeLists.txt  chirp_decode.c  main.c  queue.h  reverse_encode.h  util.h
ligbee-cots/offline-demo/RealTrace/: LoRaTrace201911161100.txt  LoRaTrace201911161105.txt  LoRaTrace201911161110.txt  LoRaTrace201911161115.txt
ligbee-cots/offline-demo/SynthesisTrace/: chip_seq_16  chip_seq_4  chip_seq_8  result_4
ligbee-cots/online-lib/: chirp_decode.h  reverse_encode.c
ligbee-usrp/gr-lobee/: CMakeLists.txt
ligbee-usrp/gr-lobee-encoder/: .gitignore
ligbee-usrp/gr-lobee-encoder/LoRaChirps/: data_2  data_binary_2  data_ifreq_2  data_ifreq_avg_2
ligbee-usrp/gr-lobee-encoder/analysis/: LoRa.py  PlotFFT.py  PlotOversample.py  RandomPacket.py  RandomSymbol.py  example_rn2483_p2p.py  lobee_result.py  lora_decode.py  lora_encode.py  lorabee_result.py  loraconfig.py  plot_lorabee.py  preprocess.py  random_lobee_cots.py  random_lobee_usrp.py  read.py  read_lobee.py  read_lorabee.py  receive.py  send_lobee_cots.py  send_lobee_usrp.py  send_lora_cots.py  sending.py  trx_test_cots.py
ligbee-usrp/gr-lobee-encoder/analysis/RandomByte/: RandomPacket201911241850.pkl  (+23 more)
ligbee-usrp/gr-lobee-encoder/examples/: lora_receive_file.grc  lora_receive_file.py  lora_receive_realtime.grc  rpp0_decoder_usrp.grc  rpp0_decoder_usrp.py  rpp0_fft_usrp.grc  rpp0_fft_usrp.py  rpp0_lorabee_usrp.grc  rpp0_lorabee_usrp.py  rpp0_rx_sim.grc  rpp0_rx_sim.py  rpp0_rx_usrp.grc  rpp0_rx_usrp.py  rpp0_txrx_sim.grc  rpp0_txrx_sim.py  rpp0_txrx_usrp.grc  rpp0_txrx_usrp.py
ligbee-usrp/gr-lobee-encoder/grc/: CMakeLists.txt  lora_fft_receiver.xml  lora_lobee_receiver.xml  lora_lora_decoder.xml  lora_receiver.xml
ligbee-usrp/gr-lobee-encoder/lib/: CMakeLists.txt  decoder_impl.cc  decoder_impl.h  encoder_impl.cc  encoder_impl.h  fft_receiver_impl.cc  fft_receiver_impl.h  lobee_receiver_impl.cc  lobee_receiver_impl.h  qa_lobee_receiver.cc  qa_lobee_receiver.h  qa_lora.cc  tables.h
ligbee-usrp/gr-lobee-encoder/python/: CMakeLists.txt  __init__.py  lora_decoder.py  lora_receiver.py  qa_fft_receiver.py  qa_lobee_receiver.py  qa_lora_decoder.py
ligbee-usrp/gr-lobee-encoder/swig/: lora_swig.i
ligbee-usrp/gr-lobee/docs/: README.lobee
ligbee-usrp/gr-lobee/grc/: CMakeLists.txt  lobee_lobee_cpp_bp.xml  lobee_lobee_py_bp.xml  lobee_quad_to_byte_fb.xml
ligbee-usrp/gr-lobee/lib/: CMakeLists.txt  lobee_cpp_bp_impl.cc  lobee_cpp_bp_impl.h  qa_lobee.cc  qa_lobee.h  quad_to_byte_fb_impl.cc  quad_to_byte_fb_impl.h  test_lobee.cc
ligbee-usrp/gr-lobee/python/: CMakeLists.txt  Stack.py  __init__.py  lobee_py_bp.py  qa_lobee_cpp_bp.py  qa_lobee_py_bp.py  qa_quad_to_byte_fb.py
ligbee-usrp/gr-lobee/recovery/: my_lobee_test_bb.py  my_lobee_test_bp.py  stream_my_lobee_test_bp.xml  stream_my_quad_to_byte_fb.xml  stream_my_stream_test_bb.xml
ligbee-usrp/gr-lobee/swig/: CMakeLists.txt  lobee_swig.i
ligbee-usrp/python-loranode/: .gitignore
(+209 files in other folders)
